--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ syntect = "5.1"
 dialoguer = "0.11"
 toml = "0.8.8"
 log = "0.4"
+env_logger = "0.11"
 uuid = { version = "1.6", features = ["v4"] }
 futures = "0.3"
 lazy_static = "1.4"
