--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ uuid = { version = "1.6", features = ["v4"] }
 futures = "0.3"
 lazy_static = "1.4"
 ctrlc = "3.4.6"
+diffy = "0.3"
 
 [[bin]]
 name = "gemini-cli-bin"
