Update Cargo.toml and remove deprecated installation scripts
- Added new dependencies: `async-trait` for async trait support and path dependencies for `gemini-core`, `gemini-mcp`, and `gemini-memory` libraries.
- Removed outdated installation scripts (`install.sh` and `install_mcp_servers.sh`) to streamline the setup process and reduce maintenance overhead.
- Updated `src/app.rs` to incorporate a new session context struct for improved state management during interactions.
- Enhanced command-line argument handling in `src/cli.rs` to support new features like auto-continue mode and progress reporting.
- Refactored various modules to utilize the new library structure, improving code organization and modularity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,11 @@ lazy_static = "1.4"
 ctrlc = "3.4.6"
 diffy = "0.3"
 futures-util = "0.3.31"
+async-trait = "0.1"
+# Add path dependencies to the new libraries
+gemini-core = { path = "../core" }
+gemini-mcp = { path = "../mcp" }
+gemini-memory = { path = "../memory" }
 
 [[bin]]
 name = "gemini-cli-bin"
