--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ ctrlc = "3.4.6"
 diffy = "0.3"
 futures-util = "0.3.31"
 async-trait = "0.1"
+anyhow = "1.0"
 # Add path dependencies to the new libraries
 gemini-core = { path = "../core" }
 gemini-mcp = { path = "../mcp" }
