Update dependencies and introduce `gemini-ipc` crate for Inter-Process Communication
- Added the `ipc` crate to centralize IPC definitions and facilitate communication between various components.
- Updated `Cargo.toml` files across multiple modules to include the new `ipc` dependency.
- Refactored IPC-related code in the MCP and CLI modules to utilize the new `ipc` crate, improving code organization and maintainability.
- Enhanced the README.md to document the new `gemini-ipc` features and its role in the architecture, including new daemons `HAPPE` and `IDA` that leverage IPC for communication.

--- a/mcp/Cargo.toml
+++ b/mcp/Cargo.toml
@@ -30,6 +30,7 @@ hostname = "0.3"
 diffy = "0.3"
 jsonrpc-lite = "0.6.0"
 env_logger = "0.10"
+ipc = { path = "../ipc" }
 
 [dev-dependencies]
 tempfile = "3.8" 
