Update Cargo configuration and introduce `gemini-ipc` crate
- Added the `gemini-ipc` crate to facilitate Inter-Process Communication between components.
- Updated `Cargo.toml` files across multiple modules to replace the `ipc` dependency with `gemini-ipc`.
- Refactored code in the MCP and CLI modules to utilize the new `gemini-ipc` crate, enhancing code organization and maintainability.
- Removed deprecated `HAPPE` and `IDA` modules and their associated files to streamline the project structure.
- Improved overall code readability and organization by consolidating imports and removing unused modules.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,13 @@ members = [
     "core",      # Core Gemini API interaction, structs, errors
     "mcp",       # MCP/Tool calling client logic
     "memory",    # Persistent memory storage logic
+    "ipc",       # Inter-process communication definitions
+    "ida",       # Internal Dialogue App daemon
+    "happe",     # Host Application Environment daemon (Placeholder)
 ]
+
+[workspace.lints]
+# Define workspace-wide lint settings here if needed
 
 [workspace.dependencies]
 # Define shared dependencies here
