--- a/ipc/Cargo.toml
+++ b/ipc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ipc"
+name = "gemini-ipc"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,4 +8,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 # Add core crate dependency if types like ServerCapabilities are needed
 gemini-core = { path = "../core" }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"], optional = true }
