Update configuration and refactor CLI structure for Gemini Suite
- Introduced a unified configuration system for the Gemini Suite, consolidating settings for HAPPE, IDA, and memory management.
- Refactored the CLI to enhance command-line argument handling and improve user interaction with the HAPPE daemon.
- Removed deprecated MCP server scripts and streamlined the installation process by updating the `Cargo.toml` files across multiple modules.
- Enhanced error handling and logging throughout the application for better debugging and maintenance.
- Updated dependencies to ensure compatibility and improved functionality across the codebase.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ members = [
     "ipc",       # Inter-process communication definitions
     "ida",       # Internal Dialogue App daemon
     "happe",     # Host Application Environment daemon (Placeholder)
+    "install",   # Installer crate for Gemini CLI Suite
+    "daemon-manager", # CLI for managing gemini-suite daemons and MCP servers
 ]
 
 [workspace.lints]
