--- a/mcp/Cargo.toml
+++ b/mcp/Cargo.toml
@@ -2,35 +2,50 @@
 name = "gemini-mcp"
 version = "0.1.0"
 edition = "2021"
+description = "MCP implementation for Gemini CLI"
+
+[dependencies]
+tokio = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+anyhow = { workspace = true }
+thiserror = { workspace = true }
+clap = { workspace = true }
+config = { workspace = true }
+dirs = { workspace = true }
+log = { workspace = true }
+tracing = { workspace = true }
+uuid = { workspace = true }
+chrono = { version = "0.4", features = ["serde"] }
+env_logger = "0.11"
+gemini-core = { path = "../core" }
+gemini-memory = { path = "../memory" }
+gemini-ipc = { path = "../ipc" }
+colored = "2.0"
+futures = "0.3"
+futures-util = "0.3"
+async-trait = "0.1"
+os_info = "3.7"
+hostname = "0.3"
+diffy = "0.3"
+jsonrpc-lite = "0.6.0"
+ctrlc = "3.4"
 
 [[bin]]
 name = "mcp-hostd"
 path = "src/bin/mcp-hostd.rs"
 
-[dependencies]
-gemini-core = { path = "../core" }
-gemini-memory = { path = "../memory" }
-reqwest = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
-tracing = { workspace = true }
-anyhow = { workspace = true }
-thiserror = { workspace = true }
-log = { workspace = true }
-futures-util = "0.3"
-futures = "0.3"
-colored = "2.0"
-chrono = { version = "0.4", features = ["serde"] }
-dirs = { workspace = true }
-async-trait = "0.1"
-os_info = "3.7"
-ctrlc = "3.4.6"
-hostname = "0.3"
-diffy = "0.3"
-jsonrpc-lite = "0.6.0"
-env_logger = "0.10"
-gemini-ipc = { path = "../ipc" }
+[[bin]]
+name = "filesystem-mcp"
+path = "src/bin/filesystem-mcp.rs"
+
+[[bin]]
+name = "command-mcp"
+path = "src/bin/command-mcp.rs"
+
+[[bin]]
+name = "memory-store-mcp"
+path = "src/bin/memory-store-mcp.rs"
 
 [dev-dependencies]
 tempfile = "3.8" 
