--- a/happe/Cargo.toml
+++ b/happe/Cargo.toml
@@ -25,6 +25,9 @@ reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
 axum = "0.6" # For HTTP server
 tower = "0.4" # For HTTP server middleware
 tower-http = { version = "0.4", features = ["cors"] } # For HTTP server CORS
+async-trait = "0.1" # For async trait implementations
+log = "0.4" # For logging
+uuid = { version = "1.4", features = ["v4"] } # For session ID generation
 
 [lints]
 workspace = true
