Update configuration files and remove deprecated scripts
- Updated `Cargo.lock` and `Cargo.toml` to reflect new dependency versions and unified configuration paths.
- Added a new `tools` member to the workspace for configuration management.
- Removed obsolete scripts (`fix_json.py`, `install_mcp_servers.sh`, `mcpd_wrapper_fixed.sh`, `mcpd_wrapper_patch.sh`, `rebuild_cli.sh`, `rebuild_mcp_servers.sh`, and `updated_servers.json`) to streamline the project.
- Enhanced the installation script to create a configuration directory and provide clearer next steps for users.
- Updated documentation in `README.md` and other files to reflect changes in configuration paths and usage instructions.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -23,14 +23,12 @@ diffy = "0.3"
 anyhow = "1.0"
 tracing = "0.1"
 gemini-ipc = { path = "../ipc" }
+gemini-core = { path = "../core" }
 
 [[bin]]
 name = "gemini-cli"
 path = "src/main.rs"
 
-[[bin]]
-name = "gemini-cli-bin"
-path = "src/main.rs"
 
 [dev-dependencies]
 tempfile = "3.10"
