--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "happe",     # Host Application Environment daemon (Placeholder)
     "install",   # Installer crate for Gemini CLI Suite
     "daemon-manager", # CLI for managing gemini-suite daemons and MCP servers
+    "tools",     # Tools for configuration, maintenance, etc.
 ]
 
 [workspace.lints]
