--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -10,7 +10,8 @@ name = "generate_unified_config"
 path = "generate_unified_config.rs"
 
 [dependencies]
+gemini-core = { path = "../core" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-toml = "0.5"
-dirs = "4.0" 
+toml = "0.7"
+dirs = "5.0" 
