Add MCP server tester and update workspace configuration
- Introduced a new package `mcp_server_tester` in `Cargo.lock` with dependencies for testing MCP servers.
- Updated `Cargo.toml` to include `tests/mcp_server_tester` as a member of the workspace for better organization.
- Enhanced documentation in `TASKS.md` to outline the rewrite of MCP servers, detailing the hybrid approach and implementation phases.
- Removed deprecated MCP server binaries (`command-mcp`, `filesystem-mcp`, `memory-store-mcp`) to streamline the project structure.
- Improved logging and error handling in various modules to enhance maintainability and debugging capabilities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "install",   # Installer crate for Gemini CLI Suite
     "daemon-manager", # CLI for managing gemini-suite daemons and MCP servers
     "tools",     # Tools for configuration, maintenance, etc.
+    "tests/mcp_server_tester", # Test binary for MCP Python servers
 ]
 
 [workspace.lints]
